--- a/package.json
+++ b/package.json
@@ -1,18 +1,74 @@
 {
   "name": "prometheus-rancher-exporter",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "Exposes Rancher metrics to Prometheus",
-  "main": "app.js",
+  "main": "app/index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_PATH=app/lib node index.js",
+    "test": "NODE_PATH=app/lib ./node_modules/.bin/nyc ./node_modules/.bin/ava",
+    "watch": "NODE_PATH=app/lib ./node_modules/.bin/nyc ./node_modules/.bin/ava --watch",
+    "coverage": "open coverage/index.html",
+    "lint": "./node_modules/.bin/eslint .",
+    "precommit": "npm run lint",
+    "prepush": "make docker.test"
   },
-  "author": "James Barwell <james.barwell@infinityworks.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/finboxio/prometheus-rancher-exporter.git"
+  },
+  "homepage": "https://github.com/finboxio/prometheus-rancher-exporter#README",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.4.2",
-    "debug": "^2.2.0",
-    "prometheus-client": "^0.1.1",
-    "request": "^2.64.0"
+    "co": "4.6.0",
+    "envvar": "1.1.0",
+    "object-assign": "4.1.0",
+    "prom-client": "4.0.0",
+    "request": "2.74.0",
+    "request-promise": "4.1.1",
+    "rootenv": "0.0.2",
+    "yoo": "1.0.3"
+  },
+  "ava": {
+    "timeout": "5s",
+    "verbose": true,
+    "files": [
+      "**/test/*unit.js",
+      "**/test/*integration.js",
+      "**/test/*system.js"
+    ],
+    "source": [
+      "**/*.js"
+    ]
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80,
+    "reporter": [
+      "text",
+      "text-summary",
+      "html"
+    ],
+    "exclude": [
+      "**/test",
+      "node_modules/**"
+    ]
+  },
+  "devDependencies": {
+    "@lr/ava": "0.16.0",
+    "chai": "3.5.0",
+    "eslint": "3.5.0",
+    "eslint-config-standard": "6.0.0",
+    "eslint-plugin-ava": "3.0.0",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-standard": "2.0.0",
+    "husky": "0.11.7",
+    "nock": "8.0.0",
+    "node-dev": "3.1.3",
+    "nyc": "8.1.0",
+    "sinon": "1.17.5",
+    "supertest": "2.0.0"
   }
 }
